--- a/index.html
+++ b/index.html
@@ -485,14 +485,35 @@ Sincerely, <br>
 									        </div>
 									    </div>
 									</div>
+									
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingThree">
+									        <h4 class="panel-title">
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Bachelor Degree of Computer Science
+									            </a>
+									        </h4>
+									    </div>
+									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+									        <div class="panel-body">
+									            <p>Completd my <strong>B.Sc</strong> graduatin from <strong>Prime University</strong>.</p>
+													<ul>
+														<li>Major Subject: <strong>Computer Science</strong></li>
+														<li>CGPA: <strong>3.15</strong> out of <strong>4</strong>.</li>
+														<li>Passing Year: <strong>2019(January)</strong> </li>
+														<li>Duration: <strong>4 years (2014-2018)</strong></li>
+													</ul>
+									        </div>
+									    </div>
+									</div>
+									
+									<div class="panel panel-default">
+									    <div class="panel-heading" role="tab" id="headingFour">
 									        <h4 class="panel-title">
 									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Higher Secondary Certificate
 									            </a>
 									        </h4>
 									    </div>
-									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
 									        <div class="panel-body">
 									               <p>Completd my <strong>H.S.C</strong> from <strong>Kushtia Government College</strong>.</p>
 													<ul>
@@ -506,13 +527,13 @@ Sincerely, <br>
 									</div>
 
 									<div class="panel panel-default">
-									    <div class="panel-heading" role="tab" id="headingFour">
+									    <div class="panel-heading" role="tab" id="headingFive">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Secondary School Certificate
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFour">Secondary School Certificate
 									            </a>
 									        </h4>
 									    </div>
-									    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+									    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
 									        <div class="panel-body">
 									             <p>Completd my <strong>S.S.C</strong> from <strong>Kushtia Zilla School,Kushtia</strong>.</p>
 													<ul>
