--- a/index.html
+++ b/index.html
@@ -466,6 +466,7 @@ Sincerely, <br>
 									         </div>
 									    </div>
 									</div> -->
+									
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingTwo">
 									        <h4 class="panel-title">
@@ -489,7 +490,7 @@ Sincerely, <br>
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingThree">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Bachelor Degree of Computer Science
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Bachelor Degree of Computer Science
 									            </a>
 									        </h4>
 									    </div>
@@ -509,7 +510,7 @@ Sincerely, <br>
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingFour">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Higher Secondary Certificate
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Higher Secondary Certificate
 									            </a>
 									        </h4>
 									    </div>
@@ -529,7 +530,7 @@ Sincerely, <br>
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingFive">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFour">Secondary School Certificate
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">Secondary School Certificate
 									            </a>
 									        </h4>
 									    </div>
