--- a/index.html
+++ b/index.html
@@ -470,18 +470,18 @@ Sincerely, <br>
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingTwo">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Bachelor Degree of Computer Science
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Master Degree of Computer Science
 									            </a>
 									        </h4>
 									    </div>
 									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 									        <div class="panel-body">
-									            <p>Completd my <strong>B.Sc</strong> graduatin from <strong>Prime University</strong>.</p>
+									            <p>Completd my <strong>M.Sc</strong> graduatin from <strong>Islamic University</strong>.</p>
 													<ul>
 														<li>Major Subject: <strong>Computer Science</strong></li>
 														<li>CGPA: <strong>3.15</strong> out of <strong>4</strong>.</li>
-														<li>Passing Year: <strong>2019(January)</strong> </li>
-														<li>Duration: <strong>4 years (2014-2018)</strong></li>
+														<li>Passing Year: <strong>2020(January)</strong> </li>
+														<li>Duration: <strong>1 years (2019-2020)</strong></li>
 													</ul>
 									        </div>
 									    </div>
