--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ Sincerely, <br>
 							<!-- 		<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingOne">
 									        <h4 class="panel-title">
-									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Graduation In Computer Science
+									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Post Graduation In Computer Science
 									            </a>
 									        </h4>
 									    </div>
@@ -476,7 +476,7 @@ Sincerely, <br>
 									    </div>
 									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 									        <div class="panel-body">
-									            <p>Completd my <strong>M.Sc</strong> graduatin from <strong>Islamic University</strong>.</p>
+									            <p>Completd my <strong>M.Sc</strong> post graduatin from <strong>Islamic University</strong>.</p>
 													<ul>
 														<li>Major Subject: <strong>Computer Science</strong></li>
 														<li>CGPA: <strong>3.15</strong> out of <strong>4</strong>.</li>
