--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@ Sincerely, <br>
 									            </a>
 									        </h4>
 									    </div>
-									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 									        <div class="panel-body">
 									            <p>Completd my <strong>B.Sc</strong> graduatin from <strong>Prime University</strong>.</p>
 													<ul>
@@ -514,7 +514,7 @@ Sincerely, <br>
 									            </a>
 									        </h4>
 									    </div>
-									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+									    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
 									        <div class="panel-body">
 									               <p>Completd my <strong>H.S.C</strong> from <strong>Kushtia Government College</strong>.</p>
 													<ul>
@@ -534,7 +534,7 @@ Sincerely, <br>
 									            </a>
 									        </h4>
 									    </div>
-									    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
+									    <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
 									        <div class="panel-body">
 									             <p>Completd my <strong>S.S.C</strong> from <strong>Kushtia Zilla School,Kushtia</strong>.</p>
 													<ul>
