--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ Sincerely, <br>
 									<li>Have knowledge in OOP concept and its 4 pillars (polymorphism abstraction encapsulation inheritance)</li>
 									<li>Experience of working with Database using <strong>MySQL,SQLITE</strong></li>
 									<li>Strong C/C++ background <a href="https://www.urionlinejudge.com.br/judge/en/profile/57828" target="blank">URI Problem Solve By Me</a></li>
-									<li>Strong C/C++ background <a href="https://uhunt.onlinejudge.org/id/761744" target="blank">UVA Problem Solve By Me</a></li>
+									<li>Strong C/C++ background <a href="https://uhunt.onlinejudge.org/id/761744">UVA Problem Solve By Me</a></li>
 									<li>Teamwork, communication and analytical skills. Always lead team in my University</li>
 									<li>Capable of learning new tools and technology very quickly</li>
 									<li>Hardworking, Punctual, Self-motivated</li>
