--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Rakib's Resume</title>
+	<title>Rakib's Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -560,6 +560,23 @@ Sincerely, <br>
 									               <p>Completd my <strong>Other Course's</strong> from <strong>Online</strong>.</p>
 													<ul>
 														<li>Group: <strong>Science</strong></li>
+														<li>Strong C/C++ background <a href="https://uhunt.onlinejudge.org/id/761744">UVA Problem Solve By Me</a></li>
+														<li>Strong C/C++ background <a href="https://uhunt.onlinejudge.org/id/761744">UVA Problem Solve By Me</a></li>
+														<li>Strong C/C++ background <a href="https://uhunt.onlinejudge.org/id/761744">UVA Problem Solve By Me</a></li>
+														<li>GPA: <strong>3.50</strong> out of <strong>5</strong>.</li>
+														<li>Passing Year: <strong>2014</strong> </li>
+														<li>Duration: <strong>2 years (2012-2014)</strong></li>
+														<li>Strong C/C++ background <a href="https://www.urionlinejudge.com.br/judge/en/profile/57828" target="blank">URI Problem Solve By Me</a> </li>
+														<li>Strong C/C++ background <a href="https://www.urionlinejudge.com.br/judge/en/profile/57828" target="blank">URI Problem Solve By Me</a></li>
+														<li>GPA: <strong>3.50</strong> out of <strong>5</strong>.</li>
+														<li>Strong C/C++ background <a href="https://www.urionlinejudge.com.br/judge/en/profile/57828" target="blank">URI Problem Solve By Me</a> </li>
+														<li>Strong C/C++ background <a href="https://uhunt.onlinejudge.org/id/761744">UVA Problem Solve By Me</a></li>
+														<li>GPA: <strong>3.50</strong> out of <strong>5</strong>.</li>
+														<li>Group: <strong>Science</strong></li>
+														<li>Group: <strong>Science</strong></li>
+														<li>GPA: <strong>3.50</strong> out of <strong>5</strong>.</li>
+														<li>Strong C/C++ background <a href="https://www.urionlinejudge.com.br/judge/en/profile/57828" target="blank">URI Problem Solve By Me</a> </li>
+														<li>Strong C/C++ background <a href="https://www.urionlinejudge.com.br/judge/en/profile/57828" target="blank">URI Problem Solve By Me</a></li>
 														<li>GPA: <strong>3.50</strong> out of <strong>5</strong>.</li>
 														<li>Passing Year: <strong>2014</strong> </li>
 														<li>Duration: <strong>2 years (2012-2014)</strong></li>
