--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ Sincerely, <br>
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-5 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta"><br>Education</br></span>
+							<span class="heading-meta"><li>Education</li></span>
 							<h1>Academic Qualification</h1>
 						</div>
 					</div>
