--- a/index.html
+++ b/index.html
@@ -759,8 +759,8 @@ Sincerely, <br>
 							<div class="project" style="background-image: url(images/img-5.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://github.com/rakibul7/Advance-Calculator-Android">Calculator </a></h3>
-										<span><a href="https://github.com/rakibul7/Advance-Calculator-Android">Android</a></span>
+										<h3><a href="https://github.com/rakibul7/Advance-Calculator-Android" target="blank">Calculator </a></h3>
+										<span><a href="https://github.com/rakibul7/Advance-Calculator-Android" target="blank">Android</a></span>
 										<!-- <p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
@@ -774,8 +774,8 @@ Sincerely, <br>
 							<div class="project" style="background-image: url(images/img-6.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://github.com/rakibul7/Wish-List-In-Android">WishList</a></h3>
-										<span><a href="https://github.com/rakibul7/Wish-List-In-Android">Android</a></span>
+										<h3><a href="https://github.com/rakibul7/Wish-List-In-Android" target="blank">WishList</a></h3>
+										<span><a href="https://github.com/rakibul7/Wish-List-In-Android" target="blank">Android</a></span>
 										<!-- <p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
@@ -798,8 +798,8 @@ Sincerely, <br>
 							<div class="project" style="background-image: url(images/img-7.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://github.com/rakibul7/Twitter_Sentimental_Analysis_using_Java">Twitter Sentimental Analysis</a></h3>
-										<span><a href="https://github.com/rakibul7/Twitter_Sentimental_Analysis_using_Java">Java</a></span>
+										<h3><a href="https://github.com/rakibul7/Twitter_Sentimental_Analysis_using_Java" target="blank">Twitter Sentimental Analysis</a></h3>
+										<span><a href="https://github.com/rakibul7/Twitter_Sentimental_Analysis_using_Java" target="blank">Java</a></span>
 										<!-- <p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
