--- a/index.html
+++ b/index.html
@@ -558,31 +558,32 @@ Sincerely, <br>
 									        <div class="panel-body">
 									               <p>Completd my <strong>Other Course's</strong> from <strong>Online</strong>.</p>
 													<ul>
-														<li>Certificate Name: Digital Security Essentials <a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">See Details</a></li>
-														<li>Certificate Name: Google Analytics <a href="http://muktopaath.gov.bd/certificate/check/MC-G413993H657761C189P">See Details</a></li>
-														<li>Certificate Name: Digital Security Essentials_<strong>Course Name: Digital Security</strong> from <strong><a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">Institution / Organization Name: Digital Security Agency</a></li>
-														<li>Certificate Name: Digital Security Essentials_<strong>Course Name: Digital Security</strong> from <strong><a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">Institution / Organization Name: Digital Security Agency</a></li>
-														<li>Certificate Name: Digital Security Essentials_<strong>Course Name: Digital Security</strong> from <strong><a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">Institution / Organization Name: Digital Security Agency</a></li>
-														<li>Certificate Name: Digital Security Essentials_<strong>Course Name: Digital Security</strong> from <strong><a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">Institution / Organization Name: Digital Security Agency</a></li>
-														<li>Certificate Name: Digital Security Essentials_<strong>Course Name: Digital Security</strong> from <strong><a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">Institution / Organization Name: Digital Security Agency</a></li>
-														<li>Certificate Name: Digital Security Essentials_<strong>Course Name: Digital Security</strong> from <strong><a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">Institution / Organization Name: Digital Security Agency</a></li>
-														<li>Certificate Name: Digital Security Essentials_<strong>Course Name: Digital Security</strong> from <strong><a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">Institution / Organization Name: Digital Security Agency</a></li>
-														<li>Certificate Name: Digital Security Essentials_<strong>Course Name: Digital Security</strong> from <strong><a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">Institution / Organization Name: Digital Security Agency</a></li>
-														<li>Certificate Name: Digital Security Essentials_<strong>Course Name: Digital Security</strong> from <strong><a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">Institution / Organization Name: Digital Security Agency</a></li>
-														<li>Certificate Name: Digital Security Essentials_<strong>Course Name: Digital Security</strong> from <strong><a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">Institution / Organization Name: Digital Security Agency</a></li>
-														<li>Certificate Name: Digital Security Essentials_<strong>Course Name: Digital Security</strong> from <strong><a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">Institution / Organization Name: Digital Security Agency</a></li>
-														<li>Certificate Name: Digital Security Essentials_<strong>Course Name: Digital Security</strong> from <strong><a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">Institution / Organization Name: Digital Security Agency</a></li>
-														<li>Certificate Name: Digital Security Essentials_<strong>Course Name: Digital Security</strong> from <strong><a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">Institution / Organization Name: Digital Security Agency</a></li>
-														<li>Certificate Name: Digital Security Essentials_<strong>Course Name: Digital Security</strong> from <strong><a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">Institution / Organization Name: Digital Security Agency</a></li>
-														<li>Certificate Name: Digital Security Essentials_<strong>Course Name: Digital Security</strong> from <strong><a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">Institution / Organization Name: Digital Security Agency</a></li>
-														<li>Certificate Name: Digital Security Essentials_<strong>Course Name: Digital Security</strong> from <strong><a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">Institution / Organization Name: Digital Security Agency</a></li>
-														<li>Certificate Name: Digital Security Essentials_<strong>Course Name: Digital Security</strong> from <strong><a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">Institution / Organization Name: Digital Security Agency</a></li>
-														<li>Certificate Name: Digital Security Essentials_<strong>Course Name: Digital Security</strong> from <strong><a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">Institution / Organization Name: Digital Security Agency</a></li>
-														<li>Certificate Name: Digital Security Essentials_<strong>Course Name: Digital Security</strong> from <strong><a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">Institution / Organization Name: Digital Security Agency</a></li>
-														<li>Certificate Name: Digital Security Essentials_<strong>Course Name: Digital Security</strong> from <strong><a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">Institution / Organization Name: Digital Security Agency</a></li>
-														<li>Certificate Name: Digital Security Essentials_<strong>Course Name: Digital Security</strong> from <strong><a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">Institution / Organization Name: Digital Security Agency</a></li>
-														<li>Certificate Name: Digital Security Essentials_<strong>Course Name: Digital Security</strong> from <strong><a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">Institution / Organization Name: Digital Security Agency</a></li>
-
+														<li>Course Name: Digital Security. <a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">See Details</a></li>
+														<li>Course Name: Google Analytics. <a href="http://muktopaath.gov.bd/certificate/check/MC-G413993H657761C189P">See Details</a></li>
+														<li>Course Name: Coronavirus Disease (COVID-19). <a href="http://muktopaath.gov.bd/certificate/check/MC-O413993B928108U236E">Institution / Organization Name: Digital Security Agency</a></li>
+														<li>Course Name: COVID-19 Awareness and Prevention. <a href="http://muktopaath.gov.bd/certificate/check/MC-A413993U613766H238N">See Details</a></li>
+														<li>Course Name: Special Course for Private Health Workers in Prevention of Covid-19. <a href="http://muktopaath.gov.bd/certificate/check/MC-D413993D884176I242Y">See Details</a></li>
+														<li>Course Name: Project Management. <a href="http://muktopaath.gov.bd/certificate/check/MC-O413993C989320H192U">See Details</a></li>
+														<li>Course Name: Management Learning. <a href="http://muktopaath.gov.bd/certificate/check/MC-Y413993I990928L195E">See Details</a></li>
+														<li>Course Name: Digital Marketing: Campaign Planning. <a href="http://muktopaath.gov.bd/certificate/check/MC-N413993S990220V185V">See Details</a></li>
+														<li>Course Name: The basic idea of Investment. <a href="http://muktopaath.gov.bd/certificate/check/MC-A413993X731090C136O">See Details</a></li>
+														<li>Course Name: National Portal Management. <a href="http://muktopaath.gov.bd/certificate/check/MC-V413993P958986P25W">See Details</a></li>
+														<li>Course Name: Career Planning. <a href="http://muktopaath.gov.bd/certificate/check/MC-M413993U989321J196K">See Details</a></li>
+														<li>Course Name: Corporate Grooming. <a href="http://muktopaath.gov.bd/certificate/check/MC-E413993P731215D154C">See Details</a></li>
+														<li>Course Name: Email Etiquette. <a href="http://muktopaath.gov.bd/certificate/check/MC-R413993R731253L181V">See Details</a></li>
+														<li>Course Name: Photography Basics. <a href="http://muktopaath.gov.bd/certificate/check/MC-S413993K990238Y184C">See Details</a></li>
+														<li>Course Name: English Fundamentals. <a href="http://muktopaath.gov.bd/certificate/check/MC-R413993F1007728O203Q">See Details</a></li>
+														<li>Course Name: Business English. <a href="http://muktopaath.gov.bd/certificate/check/MC-Y413993C990946K191Z">See Details</a></li>
+														<li>Course Name: Interview Skills. <a href="http://muktopaath.gov.bd/certificate/check/MC-H413993D990243Q149Y">See Details</a></li>
+														<li>Course Name: YouTubing. <a href="http://muktopaath.gov.bd/certificate/check/MC-L413993M658037S199X">See Details</a></li>
+														<li>Course Name: Microsoft Word Basics. <a href="http://muktopaath.gov.bd/certificate/check/MC-S413993X924416T150Q">See Details</a></li>
+														<li>Course Name: Microsoft Powerpoint Basics. <a href="http://muktopaath.gov.bd/certificate/check/MC-L413993V885127R151I">See Details</a></li>
+														<li>Course Name: Microsoft Excel Basics. <a href="http://muktopaath.gov.bd/certificate/check/MC-P413993S945051V152I">See Details</a></li>
+														<li>Course Name: Troubleshooting 1: Multimedia Projector. <a href="http://muktopaath.gov.bd/certificate/check/MC-T413993P731214C117R">See Details</a></li>
+														<li>Course Name: Troubleshooting 2: Internet Connection. <a href="http://muktopaath.gov.bd/certificate/check/MC-L413993R731210M118J">See Details</a></li>
+														<li>Course Name: Troubleshooting 3: Computer Security. <a href="http://muktopaath.gov.bd/certificate/check/MC-L413993K731205I119P">See Details</a></li>
+														<li>Course Name: Troubleshooting 4: File Processing and Sharing. <a href="http://muktopaath.gov.bd/certificate/check/MC-D413993Q731202C120X">See Details</a></li>
+														<li>Course Name: Troubleshooting 5: Operating System. <a href="http://muktopaath.gov.bd/certificate/check/MC-I413993V659854N121S">See Details</a></li>
 															
 													</ul>
 									        </div>
