--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@ Sincerely, <br>
 													<ul>
 														<li>Course Name: Digital Security. <a href="http://muktopaath.gov.bd/certificate/check/MC-H413993O613813P106O">See Details</a></li>
 														<li>Course Name: Google Analytics. <a href="http://muktopaath.gov.bd/certificate/check/MC-G413993H657761C189P">See Details</a></li>
-														<li>Course Name: Coronavirus Disease (COVID-19). <a href="http://muktopaath.gov.bd/certificate/check/MC-O413993B928108U236E">Institution / Organization Name: Digital Security Agency</a></li>
+														<li>Course Name: Coronavirus Disease (COVID-19). <a href="http://muktopaath.gov.bd/certificate/check/MC-O413993B928108U236E">See Details</a></li>
 														<li>Course Name: COVID-19 Awareness and Prevention. <a href="http://muktopaath.gov.bd/certificate/check/MC-A413993U613766H238N">See Details</a></li>
 														<li>Course Name: Special Course for Private Health Workers in Prevention of Covid-19. <a href="http://muktopaath.gov.bd/certificate/check/MC-D413993D884176I242Y">See Details</a></li>
 														<li>Course Name: Project Management. <a href="http://muktopaath.gov.bd/certificate/check/MC-O413993C989320H192U">See Details</a></li>
